Method invokes inefficient Number constructor (Bx) in SaveXMLProject Changed to Integer.valueOf(value)